crates/codec-derive/src/snapshots/fluentbase_codec_derive__tests__empty_struct.snap
---
source: crates/codec-derive/src/lib.rs
expression: get_generated_code(input)
---
impl<
    B: ::fluentbase_sdk::codec::byteorder::ByteOrder,
    const ALIGN: usize,
> ::fluentbase_sdk::codec::Encoder<B, ALIGN, { true }, { true }> for EmptyStruct {
    const HEADER_SIZE: usize = 0;
    const IS_DYNAMIC: bool = false;
    fn encode(
        &self,
        buf: &mut ::fluentbase_sdk::codec::bytes::BytesMut,
        offset: usize,
    ) -> Result<(), ::fluentbase_sdk::codec::CodecError> {
        let aligned_offset = offset;
        let is_dynamic = <Self as ::fluentbase_sdk::codec::Encoder<
            B,
            ALIGN,
            { true },
            { true },
        >>::IS_DYNAMIC;
        if is_dynamic && ALIGN != 32 {
            return Err(
                ::fluentbase_sdk::codec::CodecError::Encoding(
                    ::fluentbase_sdk::codec::EncodingError::InvalidInputData(
                        "dynamic Solidity structs require 32-byte alignment".into(),
                    ),
                ),
            );
        }
        let aligned_header_size = 0;
        let mut tail = if is_dynamic {
            let head_end = aligned_offset
                .checked_add(32)
                .ok_or(::fluentbase_sdk::codec::CodecError::Overflow)?;
            let offset = buf.len().max(head_end);
            ::fluentbase_sdk::codec::write_u32_aligned::<
                B,
                ALIGN,
            >(buf, aligned_offset, offset as u32);
            if buf.len() < aligned_header_size + offset {
                buf.resize(aligned_header_size + offset, 0);
            }
            buf.split_off(offset)
        } else {
            if buf.len() < aligned_offset + aligned_header_size {
                buf.resize(aligned_offset + aligned_header_size, 0);
            }
            buf.split_off(aligned_offset)
        };
        let mut tail_offset = 0;
        buf.unsplit(tail);
        Ok(())
    }
    fn decode(
        buf: &impl ::fluentbase_sdk::codec::bytes::Buf,
        offset: usize,
    ) -> Result<Self, ::fluentbase_sdk::codec::CodecError> {
        let aligned_offset = offset;
        if <Self as ::fluentbase_sdk::codec::Encoder<
            B,
            ALIGN,
            { true },
            { true },
        >>::IS_DYNAMIC && ALIGN != 32
        {
            return Err(
                ::fluentbase_sdk::codec::CodecError::Decoding(
                    ::fluentbase_sdk::codec::DecodingError::InvalidData(
                        "dynamic Solidity structs require 32-byte alignment".into(),
                    ),
                ),
            );
        }
        let mut tmp = if <Self as ::fluentbase_sdk::codec::Encoder<
            B,
            ALIGN,
            { true },
            { true },
        >>::IS_DYNAMIC {
            let offset = ::fluentbase_sdk::codec::read_u32_aligned::<
                B,
                ALIGN,
            >(&buf.chunk(), aligned_offset)? as usize;
            ::fluentbase_sdk::codec::checked_decode_slice_from(
                buf,
                offset,
                "struct body exceeds input",
            )?
        } else {
            ::fluentbase_sdk::codec::checked_decode_slice_from(
                buf,
                aligned_offset,
                "struct head exceeds input",
            )?
        };
        let mut current_offset = 0;
        Ok(EmptyStruct {})
    }
    fn partial_decode(
        buffer: &impl ::fluentbase_sdk::codec::bytes::Buf,
        offset: usize,
    ) -> Result<(usize, usize), ::fluentbase_sdk::codec::CodecError> {
        let aligned_offset = offset;
        if <Self as ::fluentbase_sdk::codec::Encoder<
            B,
            ALIGN,
            { true },
            { true },
        >>::IS_DYNAMIC {
            if ALIGN != 32 {
                return Err(
                    ::fluentbase_sdk::codec::CodecError::Decoding(
                        ::fluentbase_sdk::codec::DecodingError::InvalidData(
                            "dynamic Solidity structs require 32-byte alignment".into(),
                        ),
                    ),
                );
            }
            let data_offset = ::fluentbase_sdk::codec::read_u32_aligned::<
                B,
                ALIGN,
            >(&buffer.chunk(), aligned_offset)? as usize;
            Ok((
                data_offset,
                <Self as ::fluentbase_sdk::codec::Encoder<
                    B,
                    ALIGN,
                    { true },
                    { true },
                >>::HEADER_SIZE,
            ))
        } else {
            Ok((
                aligned_offset,
                <Self as ::fluentbase_sdk::codec::Encoder<
                    B,
                    ALIGN,
                    { true },
                    { true },
                >>::HEADER_SIZE,
            ))
        }
    }
}
impl<
    B: ::fluentbase_sdk::codec::byteorder::ByteOrder,
    const ALIGN: usize,
> ::fluentbase_sdk::codec::Encoder<B, ALIGN, { true }, { false }> for EmptyStruct {
    const HEADER_SIZE: usize = 0;
    const IS_DYNAMIC: bool = false;
    fn encode(
        &self,
        buf: &mut ::fluentbase_sdk::codec::bytes::BytesMut,
        offset: usize,
    ) -> Result<(), ::fluentbase_sdk::codec::CodecError> {
        let aligned_offset = offset;
        let is_dynamic = <Self as ::fluentbase_sdk::codec::Encoder<
            B,
            ALIGN,
            { true },
            { false },
        >>::IS_DYNAMIC;
        if is_dynamic && ALIGN != 32 {
            return Err(
                ::fluentbase_sdk::codec::CodecError::Encoding(
                    ::fluentbase_sdk::codec::EncodingError::InvalidInputData(
                        "dynamic Solidity structs require 32-byte alignment".into(),
                    ),
                ),
            );
        }
        let aligned_header_size = 0;
        let mut tail = if is_dynamic {
            let head_end = aligned_offset
                .checked_add(32)
                .ok_or(::fluentbase_sdk::codec::CodecError::Overflow)?;
            let offset = buf.len().max(head_end);
            ::fluentbase_sdk::codec::write_u32_aligned::<
                B,
                ALIGN,
            >(buf, aligned_offset, offset as u32);
            if buf.len() < aligned_header_size + offset {
                buf.resize(aligned_header_size + offset, 0);
            }
            buf.split_off(offset)
        } else {
            if buf.len() < aligned_offset + aligned_header_size {
                buf.resize(aligned_offset + aligned_header_size, 0);
            }
            buf.split_off(aligned_offset)
        };
        let mut tail_offset = 0;
        buf.unsplit(tail);
        Ok(())
    }
    fn decode(
        buf: &impl ::fluentbase_sdk::codec::bytes::Buf,
        offset: usize,
    ) -> Result<Self, ::fluentbase_sdk::codec::CodecError> {
        let aligned_offset = offset;
        if <Self as ::fluentbase_sdk::codec::Encoder<
            B,
            ALIGN,
            { true },
            { false },
        >>::IS_DYNAMIC && ALIGN != 32
        {
            return Err(
                ::fluentbase_sdk::codec::CodecError::Decoding(
                    ::fluentbase_sdk::codec::DecodingError::InvalidData(
                        "dynamic Solidity structs require 32-byte alignment".into(),
                    ),
                ),
            );
        }
        let mut tmp = if <Self as ::fluentbase_sdk::codec::Encoder<
            B,
            ALIGN,
            { true },
            { false },
        >>::IS_DYNAMIC {
            let offset = ::fluentbase_sdk::codec::read_u32_aligned::<
                B,
                ALIGN,
            >(&buf.chunk(), aligned_offset)? as usize;
            ::fluentbase_sdk::codec::checked_decode_slice_from(
                buf,
                offset,
                "struct body exceeds input",
            )?
        } else {
            ::fluentbase_sdk::codec::checked_decode_slice_from(
                buf,
                aligned_offset,
                "struct head exceeds input",
            )?
        };
        let mut current_offset = 0;
        Ok(EmptyStruct {})
    }
    fn partial_decode(
        buffer: &impl ::fluentbase_sdk::codec::bytes::Buf,
        offset: usize,
    ) -> Result<(usize, usize), ::fluentbase_sdk::codec::CodecError> {
        let aligned_offset = offset;
        if <Self as ::fluentbase_sdk::codec::Encoder<
            B,
            ALIGN,
            { true },
            { false },
        >>::IS_DYNAMIC {
            if ALIGN != 32 {
                return Err(
                    ::fluentbase_sdk::codec::CodecError::Decoding(
                        ::fluentbase_sdk::codec::DecodingError::InvalidData(
                            "dynamic Solidity structs require 32-byte alignment".into(),
                        ),
                    ),
                );
            }
            let data_offset = ::fluentbase_sdk::codec::read_u32_aligned::<
                B,
                ALIGN,
            >(&buffer.chunk(), aligned_offset)? as usize;
            Ok((
                data_offset,
                <Self as ::fluentbase_sdk::codec::Encoder<
                    B,
                    ALIGN,
                    { true },
                    { false },
                >>::HEADER_SIZE,
            ))
        } else {
            Ok((
                aligned_offset,
                <Self as ::fluentbase_sdk::codec::Encoder<
                    B,
                    ALIGN,
                    { true },
                    { false },
                >>::HEADER_SIZE,
            ))
        }
    }
}
impl<
    B: ::fluentbase_sdk::codec::byteorder::ByteOrder,
    const ALIGN: usize,
> ::fluentbase_sdk::codec::Encoder<B, ALIGN, { false }, { true }> for EmptyStruct {
    const HEADER_SIZE: usize = 0;
    const IS_DYNAMIC: bool = false;
    fn encode(
        &self,
        buf: &mut ::fluentbase_sdk::codec::bytes::BytesMut,
        offset: usize,
    ) -> Result<(), ::fluentbase_sdk::codec::CodecError> {
        let mut current_offset = offset;
        let header_size = <Self as ::fluentbase_sdk::codec::Encoder<
            B,
            ALIGN,
            { false },
            { true },
        >>::HEADER_SIZE;
        if buf.len() < current_offset + header_size {
            buf.resize(current_offset + header_size, 0);
        }
        Ok(())
    }
    fn decode(
        buf: &impl ::fluentbase_sdk::codec::bytes::Buf,
        offset: usize,
    ) -> Result<Self, ::fluentbase_sdk::codec::CodecError> {
        let mut current_offset = offset;
        Ok(EmptyStruct {})
    }
    fn partial_decode(
        buffer: &impl ::fluentbase_sdk::codec::bytes::Buf,
        offset: usize,
    ) -> Result<(usize, usize), ::fluentbase_sdk::codec::CodecError> {
        Ok((
            offset,
            <Self as ::fluentbase_sdk::codec::Encoder<
                B,
                ALIGN,
                { false },
                { true },
            >>::HEADER_SIZE,
        ))
    }
}
impl<
    B: ::fluentbase_sdk::codec::byteorder::ByteOrder,
    const ALIGN: usize,
> ::fluentbase_sdk::codec::Encoder<B, ALIGN, { false }, { false }> for EmptyStruct {
    const HEADER_SIZE: usize = 0;
    const IS_DYNAMIC: bool = false;
    fn encode(
        &self,
        buf: &mut ::fluentbase_sdk::codec::bytes::BytesMut,
        offset: usize,
    ) -> Result<(), ::fluentbase_sdk::codec::CodecError> {
        let mut current_offset = offset;
        let header_size = <Self as ::fluentbase_sdk::codec::Encoder<
            B,
            ALIGN,
            { false },
            { false },
        >>::HEADER_SIZE;
        if buf.len() < current_offset + header_size {
            buf.resize(current_offset + header_size, 0);
        }
        Ok(())
    }
    fn decode(
        buf: &impl ::fluentbase_sdk::codec::bytes::Buf,
        offset: usize,
    ) -> Result<Self, ::fluentbase_sdk::codec::CodecError> {
        let mut current_offset = offset;
        Ok(EmptyStruct {})
    }
    fn partial_decode(
        buffer: &impl ::fluentbase_sdk::codec::bytes::Buf,
        offset: usize,
    ) -> Result<(usize, usize), ::fluentbase_sdk::codec::CodecError> {
        Ok((
            offset,
            <Self as ::fluentbase_sdk::codec::Encoder<
                B,
                ALIGN,
                { false },
                { false },
            >>::HEADER_SIZE,
        ))
    }
}
impl ::fluentbase_sdk::codec::SolidityEventTopic for EmptyStruct {
    const IS_REFERENCE_TYPE: bool = true;
    fn encode_topic_preimage(
        &self,
        out: &mut ::fluentbase_sdk::codec::bytes::BytesMut,
    ) -> Result<(), ::fluentbase_sdk::codec::CodecError> {
        Ok(())
    }
}
